<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:id="@+id/pet_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/ic_dog" />

    </RelativeLayout>








    <EditText
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_image"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/futura_round"
        android:hint="@string/pet_name"
        android:inputType="textPersonName"
        android:padding="12dp" />


    <AutoCompleteTextView
        android:id="@+id/pet_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_name"
        android:layout_marginTop="13dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/futura_round"
        android:hint="@string/pet_breed"
        android:padding="12dp" />

    <LinearLayout
        android:id="@+id/Age_Selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_breed"
        android:layout_marginTop="12dp"

        android:weightSum="90">

        <EditText
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="30"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/futura_round"
            android:hint="@string/date"
            android:inputType="date"
            android:maxLength="2"
            android:padding="12dp" />

        <EditText
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="30"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/futura_round"
            android:hint="@string/month"
            android:inputType="date"
            android:maxLength="2"
            android:padding="12dp" />


        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="30"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/futura_round"
            android:hint="@string/year"
            android:inputType="date"
            android:maxLength="4"
            android:padding="12dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/gender_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Age_Selection"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/futura_round"
            android:text="@string/select_gender" />


        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_shape"
                android:fontFamily="@font/futura_round"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_shape"
                android:fontFamily="@font/futura_round"
                android:text="@string/female" />

        </RadioGroup>


    </LinearLayout>


</RelativeLayout>












